# ws25_statistik

./: .gitignore  Auswertung_SHT.Rmd  DESKRIPTIV.md  MARKETING.md  README.html  README.md  data.ipynb  pyproject.toml  test.py  thomas.ipynb  thomas.rmd
data/: .~lock.data_project_metset_CodeBook.xlsx#  codebook.json  codebook_blueprint.json  data_cleaned.parquet  data_project_metset.csv  data_project_metset_CodeBook.xlsx
data/encoding/: fragen_adoptionspfad.json  fragen_assistenz_vorteile-pro-SHT.json  fragen_bestand_interesse.json  fragen_design_loesung.json  fragen_design_steuerung.json  fragen_energie.json  fragen_energieeinsparung_vorteile-pro-SHT.json  fragen_finanz.json  fragen_information.json  fragen_komfort_vorteile-pro-SHT.json  fragen_kosteneinsparung_vorteile-pro-SHT.json  fragen_meinungsbild.json  fragen_sicherheit_vorteile-pro-SHT.json  fragen_steuerung.json  fragen_unterhaltung_vorteile-pro-SHT.json  fragen_vorteile.json  soziodemographische_Daten.json  vorlage.json
modules/: etl.py
